--- a/data/0600IbnIbrahimTiflisi/0600IbnIbrahimTiflisi.QanunAdab/0600IbnIbrahimTiflisi.QanunAdab.AOCP202502141220Vols-per1.yml
+++ b/data/0600IbnIbrahimTiflisi/0600IbnIbrahimTiflisi.QanunAdab/0600IbnIbrahimTiflisi.QanunAdab.AOCP202502141220Vols-per1.yml
@@ -1,5 +1,5 @@
-00#VERS#CLENGTH##: 919914
-00#VERS#LENGTH###: 201442
+00#VERS#CLENGTH##: 1020800
+00#VERS#LENGTH###: 205142
 00#VERS#URI######: 0600IbnIbrahimTiflisi.QanunAdab.AOCP202502141220Vols-per1
 80#VERS#BASED####: https://search.worldcat.org/title/21842325
 80#VERS#COLLATED#: permalink, permalink, permalink
